# airflow-weather-recorder

./: .gitignore  airflow.cfg  docker-compose.yml  install-and-start.sh  pyproject.toml
dags/: check_weather.py
src/airflow_weather_recorder/: response_storage.py  weather.py
